# swelve

./: CMakeLists.txt  README.md
swelve-lib/: CMakeLists.txt
swelve-lib/include/: Swelve.hpp  SwelveDeclarations.hpp  SwelveExtension.hpp  SwelveManifest.hpp  SwelveObject.hpp  SwelveSerializable.hpp  SwelveUtils.hpp
swelve-lib/source/: Swelve.cpp  SwelveExtension.cpp  SwelveManifest.cpp  SwelveObject.cpp  SwelveString.cpp
swelve-tests/: CMakeLists.txt
swelve-tests/source/: extensionReadWriteTest.cpp  main.cpp  main.hpp  manifestReadWriteTest.cpp  swelveStringReadWriteTest.cpp
